--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,132 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{guarrasi2022pareto,
+  title={Pareto optimization of deep networks for COVID-19 diagnosis from chest X-rays},
+  author={Guarrasi, Valerio and D’Amico, Natascha Claudia and Sicilia, Rosa and Cordelli, Ermanno and Soda, Paolo},
+  journal={Pattern Recognition},
+  volume={121},
+  pages={108242},
+  year={2022},
+  publisher={Elsevier}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@article{vernocchigut,
+  title={Gut microbiota ecology and inferred functions in children with ASD compared to neurotypical subjects},
+  author={Vernocchi, Pamela and Ristori, Maria Vittoria and Guerrera, Silvia and Guarrasi, Valerio and Conte, Federica and Russo, Alessandra and Lupi, Elisabetta and Albitar-Nehme, Sami and Gardini, Simone and Paci, Paola and others},
+  journal={Frontiers in Microbiology},
+  pages={1670},
+  publisher={Frontiers}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
+@article{del2021fecal,
+  title={Fecal microbiota signatures of insulin resistance, inflammation, and metabolic syndrome in youth with obesity: a pilot study},
+  author={Del Chierico, Federica and Manco, Melania and Gardini, Simone and Guarrasi, Valerio and Russo, Alessandra and Bianchi, Marzia and Tortosa, Valentina and Quagliariello, Andrea and Shashaj, Blegina and Fintini, Danilo and others},
+  journal={Acta Diabetologica},
+  volume={58},
   number={8},
-  pages={549--560},
-  year={1905},
+  pages={1009--1022},
+  year={2021},
+  publisher={Springer}
+}
+
+@article{soda2012aiforcovid,
+  title={AIforCOVID: Predicting the Clinical Outcomes in Patients with COVID-19 Applying AI to Chest-X-rays. An Italian Multicentre Study. arXiv 2020},
+  author={Soda, Paolo and D’Amico, NC and Tessadori, Jacopo and Valbusa, Giovanni and Guarrasi, V and Bortolotto, C and Akbar, MU and Sicilia, R and Cordelli, E and Fazzini, D and others},
+  journal={arXiv preprint arXiv:2012.06531}
+}
+
+@article{cipollari2022convolutional,
+  title={Convolutional neural networks for automated classification of prostate multiparametric magnetic resonance imaging based on image quality},
+  author={Cipollari, Stefano and Guarrasi, Valerio and Pecoraro, Martina and Bicchetti, Marco and Messina, Emanuele and Farina, Lorenzo and Paci, Paola and Catalano, Carlo and Panebianco, Valeria},
+  journal={Journal of Magnetic Resonance Imaging},
+  volume={55},
+  number={2},
+  pages={480--490},
+  year={2022},
   publisher={Wiley Online Library}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{tozzi2021nasopharyngeal,
+  title={Nasopharyngeal microbiota in hospitalized children with Bordetella pertussis and Rhinovirus infection},
+  author={Tozzi, AE and Del Chierico, F and Pandolfi, E and Reddel, S and Gesualdo, F and Gardini, S and Guarrasi, V and Russo, L and Croci, I and Campagna, I and others},
+  journal={Scientific reports},
+  volume={11},
+  number={1},
+  pages={1--10},
+  year={2021},
+  publisher={Nature Publishing Group}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{guarrasi2022optimized,
+  title={Optimized Fusion of CNNs to Diagnose Pulmonary Diseases on Chest X-Rays},
+  author={Guarrasi, Valerio and Soda, Paolo},
+  booktitle={International Conference on Image Analysis and Processing},
+  pages={197--209},
+  year={2022},
+  organization={Springer}
+}
+
+@article{soda2021aiforcovid,
+  title={AIforCOVID: predicting the clinical outcomes in patients with COVID-19 applying AI to chest-X-rays. An Italian multicentre study},
+  author={Soda, Paolo and D’Amico, Natascha Claudia and Tessadori, Jacopo and Valbusa, Giovanni and Guarrasi, Valerio and Bortolotto, Chandra and Akbar, Muhammad Usman and Sicilia, Rosa and Cordelli, Ermanno and Fazzini, Deborah and others},
+  journal={Medical image analysis},
+  volume={74},
+  pages={102216},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{taibi2021hepatitis,
+  title={Hepatitis C diagnosis and treatment in people who use drugs: mind the gap in the linkage to care},
+  author={Taibi, C and Luzzitelli, I and Comandini, U Visco and Girardi, E and Monacelli, G and Rapisarda, LM and Garbuglia, AR and Minosse, C and Guarrasi, V and Vincenzi, L and others},
+  journal={European Review for Medical and Pharmacological Sciences},
+  volume={25},
+  number={19},
+  pages={5913--5921},
+  year={2021},
+  publisher={Verduci Editore}
+}
+
+@article{liu2021temporal,
+  title={Temporal network motifs: Models, limitations, evaluation},
+  author={Liu, Penghang and Guarrasi, Valerio and Sariyuce, A Erdem},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{sias2020human,
+  title={Human papillomavirus infections in cervical samples from HIV-positive women: evaluation of the presence of the nonavalent HPV genotypes and genetic diversity},
+  author={Sias, Catia and Guarrasi, Valerio and Minosse, Claudia and Lapa, Daniele and Nonno, Franca Del and Capobianchi, Maria Rosaria and Garbuglia, Anna Rosa and Del Porto, Paola and Paci, Paola},
+  journal={Frontiers in microbiology},
+  pages={2995},
+  year={2020},
+  publisher={Frontiers}
+}
+
+@inproceedings{guarrasi2021multi,
+  title={A Multi-Expert System to Detect COVID-19 Cases in X-ray Images},
+  author={Guarrasi, Valerio and D'Amico, Natascha Claudia and Sicilia, Rosa and Cordelli, Ermanno and Soda, Paolo},
+  booktitle={2021 IEEE 34th International Symposium on Computer-Based Medical Systems (CBMS)},
+  pages={395--400},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{guarrasi2022multi,
+  title={Multi-objective optimization determines when, which and how to fuse deep networks: an application to predict COVID-19 outcomes},
+  author={Guarrasi, Valerio and Soda, Paolo},
+  journal={arXiv preprint arXiv:2204.03772},
+  year={2022}
+}
+
+@article{fiscon2021assessing,
+  title={Assessing the impact of data-driven limitations on tracing and forecasting the outbreak dynamics of COVID-19},
+  author={Fiscon, Giulia and Salvadore, Francesco and Guarrasi, Valerio and Garbuglia, Anna Rosa and Paci, Paola},
+  journal={Computers in biology and medicine},
+  volume={135},
+  pages={104657},
+  year={2021},
+  publisher={Elsevier}
 }
