--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,29 +11,24 @@
   publisher={Elsevier}
 }
 
-@article{vernocchigut,
+@article{vernocchi2022gut,
   title={Gut microbiota ecology and inferred functions in children with ASD compared to neurotypical subjects},
   author={Vernocchi, Pamela and Ristori, Maria Vittoria and Guerrera, Silvia and Guarrasi, Valerio and Conte, Federica and Russo, Alessandra and Lupi, Elisabetta and Albitar-Nehme, Sami and Gardini, Simone and Paci, Paola and others},
   journal={Frontiers in Microbiology},
-  pages={1670},
+  volume={13},
+  pages={871086},
+  year={2022},
   publisher={Frontiers}
 }
 
 @article{del2021fecal,
   title={Fecal microbiota signatures of insulin resistance, inflammation, and metabolic syndrome in youth with obesity: a pilot study},
   author={Del Chierico, Federica and Manco, Melania and Gardini, Simone and Guarrasi, Valerio and Russo, Alessandra and Bianchi, Marzia and Tortosa, Valentina and Quagliariello, Andrea and Shashaj, Blegina and Fintini, Danilo and others},
-  journal={Acta Diabetologica},
+  journal={Acta diabetologica},
   volume={58},
-  number={8},
   pages={1009--1022},
   year={2021},
-  publisher={Springer}
-}
-
-@article{soda2012aiforcovid,
-  title={AIforCOVID: Predicting the Clinical Outcomes in Patients with COVID-19 Applying AI to Chest-X-rays. An Italian Multicentre Study. arXiv 2020},
-  author={Soda, Paolo and D’Amico, NC and Tessadori, Jacopo and Valbusa, Giovanni and Guarrasi, V and Bortolotto, C and Akbar, MU and Sicilia, R and Cordelli, E and Fazzini, D and others},
-  journal={arXiv preprint arXiv:2012.06531}
+  publisher={Springer Milan}
 }
 
 @article{cipollari2022convolutional,
@@ -50,25 +45,25 @@
 @article{tozzi2021nasopharyngeal,
   title={Nasopharyngeal microbiota in hospitalized children with Bordetella pertussis and Rhinovirus infection},
   author={Tozzi, AE and Del Chierico, F and Pandolfi, E and Reddel, S and Gesualdo, F and Gardini, S and Guarrasi, V and Russo, L and Croci, I and Campagna, I and others},
-  journal={Scientific reports},
+  journal={Scientific Reports},
   volume={11},
   number={1},
-  pages={1--10},
+  pages={22858},
   year={2021},
-  publisher={Nature Publishing Group}
+  publisher={Nature Publishing Group UK London}
 }
 
 @inproceedings{guarrasi2022optimized,
-  title={Optimized Fusion of CNNs to Diagnose Pulmonary Diseases on Chest X-Rays},
+  title={Optimized fusion of CNNs to diagnose pulmonary diseases on chest X-Rays},
   author={Guarrasi, Valerio and Soda, Paolo},
   booktitle={International Conference on Image Analysis and Processing},
   pages={197--209},
   year={2022},
-  organization={Springer}
+  organization={Springer International Publishing Cham}
 }
 
 @article{soda2021aiforcovid,
-  title={AIforCOVID: predicting the clinical outcomes in patients with COVID-19 applying AI to chest-X-rays. An Italian multicentre study},
+  title={AIforCOVID: Predicting the clinical outcomes in patients with COVID-19 applying AI to chest-X-rays. An Italian multicentre study},
   author={Soda, Paolo and D’Amico, Natascha Claudia and Tessadori, Jacopo and Valbusa, Giovanni and Guarrasi, Valerio and Bortolotto, Chandra and Akbar, Muhammad Usman and Sicilia, Rosa and Cordelli, Ermanno and Fazzini, Deborah and others},
   journal={Medical image analysis},
   volume={74},
@@ -78,20 +73,21 @@
 }
 
 @article{taibi2021hepatitis,
-  title={Hepatitis C diagnosis and treatment in people who use drugs: mind the gap in the linkage to care},
+  title={Hepatitis C diagnosis and treatment in people who use drugs: mind the gap in the linkage to care.},
   author={Taibi, C and Luzzitelli, I and Comandini, U Visco and Girardi, E and Monacelli, G and Rapisarda, LM and Garbuglia, AR and Minosse, C and Guarrasi, V and Vincenzi, L and others},
-  journal={European Review for Medical and Pharmacological Sciences},
+  journal={European Review for Medical \& Pharmacological Sciences},
   volume={25},
   number={19},
-  pages={5913--5921},
-  year={2021},
-  publisher={Verduci Editore}
+  year={2021}
 }
 
 @article{liu2021temporal,
   title={Temporal network motifs: Models, limitations, evaluation},
-  author={Liu, Penghang and Guarrasi, Valerio and Sariyuce, A Erdem},
+  author={Liu, Penghang and Guarrasi, Valerio and Sar{\i}y{\"u}ce, Ahmet Erdem},
   journal={IEEE Transactions on Knowledge and Data Engineering},
+  volume={35},
+  number={1},
+  pages={945--957},
   year={2021},
   publisher={IEEE}
 }
@@ -100,13 +96,14 @@
   title={Human papillomavirus infections in cervical samples from HIV-positive women: evaluation of the presence of the nonavalent HPV genotypes and genetic diversity},
   author={Sias, Catia and Guarrasi, Valerio and Minosse, Claudia and Lapa, Daniele and Nonno, Franca Del and Capobianchi, Maria Rosaria and Garbuglia, Anna Rosa and Del Porto, Paola and Paci, Paola},
   journal={Frontiers in microbiology},
-  pages={2995},
+  volume={11},
+  pages={603657},
   year={2020},
-  publisher={Frontiers}
+  publisher={Frontiers Media SA}
 }
 
 @inproceedings{guarrasi2021multi,
-  title={A Multi-Expert System to Detect COVID-19 Cases in X-ray Images},
+  title={A multi-expert system to detect COVID-19 cases in X-ray images},
   author={Guarrasi, Valerio and D'Amico, Natascha Claudia and Sicilia, Rosa and Cordelli, Ermanno and Soda, Paolo},
   booktitle={2021 IEEE 34th International Symposium on Computer-Based Medical Systems (CBMS)},
   pages={395--400},
@@ -114,19 +111,172 @@
   organization={IEEE}
 }
 
-@article{guarrasi2022multi,
-  title={Multi-objective optimization determines when, which and how to fuse deep networks: an application to predict COVID-19 outcomes},
+@article{guarrasi2023multi,
+  title={Multi-objective optimization determines when, which and how to fuse deep networks: An application to predict COVID-19 outcomes},
   author={Guarrasi, Valerio and Soda, Paolo},
-  journal={arXiv preprint arXiv:2204.03772},
-  year={2022}
+  journal={Computers in Biology and Medicine},
+  volume={154},
+  pages={106625},
+  year={2023},
+  publisher={Pergamon}
 }
 
 @article{fiscon2021assessing,
   title={Assessing the impact of data-driven limitations on tracing and forecasting the outbreak dynamics of COVID-19},
   author={Fiscon, Giulia and Salvadore, Francesco and Guarrasi, Valerio and Garbuglia, Anna Rosa and Paci, Paola},
-  journal={Computers in biology and medicine},
+  journal={Computers in Biology and Medicine},
   volume={135},
   pages={104657},
   year={2021},
-  publisher={Elsevier}
+  publisher={Pergamon}
+}
+
+@article{romani2022relationship,
+  title={The relationship between pediatric gut microbiota and SARS-CoV-2 infection},
+  author={Romani, Lorenza and Del Chierico, Federica and Macari, Gabriele and Pane, Stefania and Ristori, Maria Vittoria and Guarrasi, Valerio and Gardini, Simone and Pascucci, Giuseppe Rubens and Cotugno, Nicola and Perno, Carlo Federico and others},
+  journal={Frontiers in cellular and infection microbiology},
+  volume={12},
+  pages={908492},
+  year={2022},
+  publisher={Frontiers}
+}
+
+@article{del2022gut,
+  title={Gut microbiota functional traits, blood PH, and anti-GAD antibodies concur in the clinical characterization of T1D at onset},
+  author={Del Chierico, Federica and Conta, Giorgia and Matteoli, Maria Cristina and Fierabracci, Alessandra and Reddel, Sofia and Macari, Gabriele and Gardini, Simone and Guarrasi, Valerio and Levi Mortera, Stefano and Marzano, Valeria and others},
+  journal={International Journal of Molecular Sciences},
+  volume={23},
+  number={18},
+  pages={10256},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{infantino2022comparison,
+  title={Comparison of current methods for anti-dsDNA antibody detection and reshaping diagnostic strategies},
+  author={Infantino, Maria and Palterer, Boaz and Previtali, Giulia and Alessio, Maria-Grazia and Villalta, Danilo and Carbone, Teresa and Platzgummer, Stefan and Paura, Giusi and Castiglione, Caterina and Fabris, Martina and others},
+  journal={Scandinavian Journal of Immunology},
+  volume={96},
+  number={6},
+  pages={e13220},
+  year={2022}
+}
+
+@article{previtali2022comparison,
+  title={Comparison of current methods for anti-dsDNA antibody detection and reshaping diagnostic strategies},
+  author={Previtali, Giulia and BERGAMO, ATS and Alessio, Mariagrazia and Fabris, Martina and Pesce, Giampaola and Cinquanta, Luigi and Guarrasi, Valerio and Manfredi, Mariangela and di Dio, Nuovo Ospedale San Giovanni and Bizzaro, Nicola and others},
+  year={2022}
+}
+
+@article{caruso2022multimodal,
+  title={A multimodal ensemble driven by multiobjective optimisation to predict overall survival in non-small-cell lung cancer},
+  author={Caruso, Camillo Maria and Guarrasi, Valerio and Cordelli, Ermanno and Sicilia, Rosa and Gentile, Silvia and Messina, Laura and Fiore, Michele and Piccolo, Claudia and Beomonte Zobel, Bruno and Iannello, Giulio and others},
+  journal={Journal of Imaging},
+  volume={8},
+  number={11},
+  pages={298},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{levi2022functional,
+  title={Functional and taxonomic traits of the gut microbiota in type 1 diabetes children at the onset: a metaproteomic study},
+  author={Levi Mortera, Stefano and Marzano, Valeria and Vernocchi, Pamela and Matteoli, Maria Cristina and Guarrasi, Valerio and Gardini, Simone and Del Chierico, Federica and Rapini, Novella and Deodati, Annalisa and Fierabracci, Alessandra and others},
+  journal={International Journal of Molecular Sciences},
+  volume={23},
+  number={24},
+  pages={15982},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{guarrasi2022multimodal,
+  title={Multimodal explainability via latent shift applied to COVID-19 stratification},
+  author={Guarrasi, Valerio and Tronchin, Lorenzo and Albano, Domenico and Faiella, Eliodoro and Fazzini, Deborah and Santucci, Domiziana and Soda, Paolo},
+  journal={arXiv preprint arXiv:2212.14084},
+  year={2022}
+}
+
+@article{laterza2023ecology,
+  title={Ecology and Machine Learning-Based Classification Models of Gut Microbiota and Inflammatory Markers May Evaluate the Effects of Probiotic Supplementation in Patients Recently Recovered from COVID-19},
+  author={Laterza, Lucrezia and Putignani, Lorenza and Settanni, Carlo Romano and Petito, Valentina and Varca, Simone and De Maio, Flavio and Macari, Gabriele and Guarrasi, Valerio and Gremese, Elisa and Tolusso, Barbara and others},
+  journal={International Journal of Molecular Sciences},
+  volume={24},
+  number={7},
+  pages={6623},
+  year={2023},
+  publisher={MDPI}
+}
+
+@inproceedings{guarrasi2023building,
+  title={Building an AI-enabled metaverse for intelligent healthcare: opportunities and challenges},
+  author={Guarrasi, Valerio and Tronchin, Lorenzo and Caruso, Camillo Maria and Rofena, Aurora and Manni, Guido and Aksu, Fatih and Paolo, Domenico and Iannello, Giulio and Sicilia, Rosa and Cordelli, Ermanno and others},
+  booktitle={Ital-IA 2023, Italia Intelligenza Artificiale Thematic Workshops, co-located with the 3rd CINI National Lab AIIS Conference on Artificial Intelligence (Ital IA 2023), Pisa, Italy, May 29-30, 2023},
+  pages={134--139},
+  year={2023},
+  organization={CEUR-WS}
+}
+
+@article{caruso2023deep,
+  title={A Deep Learning Approach for Overall Survival Analysis with Missing Values},
+  author={Caruso, Camillo Maria and Guarrasi, Valerio and Ramella, Sara and Soda, Paolo},
+  journal={arXiv preprint arXiv:2307.11465},
+  year={2023}
+}
+
+@article{rofena2023deep,
+  title={A Deep Learning Approach for Virtual Contrast Enhancement in Contrast Enhanced Spectral Mammography},
+  author={Rofena, Aurora and Guarrasi, Valerio and Sarli, Marina and Piccolo, Claudia Lucia and Sammarra, Matteo and Zobel, Bruno Beomonte and Soda, Paolo},
+  journal={arXiv preprint arXiv:2308.00471},
+  year={2023}
+}
+
+@article{cordelli2023making,
+  title={Making AI trustworthy in multimodal and healthcare scenarios},
+  author={Cordelli, Ermanno and Guarrasi, Valerio and Iannello, Giulio and Ruffini, Filippo and Sicilia, Rosa and Soda, Paolo and Tronchin, Lorenzo},
+  journal={Proceedings of the Ital-IA},
+  year={2023}
+}
+
+@article{conte2022sustainable,
+  title={Sustainable AI: inside the deep, alongside the green},
+  author={Conte, Francesco and Cordelli, Ermanno and Guarrasi, Valerio and Iannello, Giulio and Sicilia, Rosa and Soda, Paolo and Tortora, Matteo and Tronchin, Lorenzo},
+  year={2022}
+}
+
+@article{marzano2023williams,
+  title={Williams--Beuren syndrome shapes the gut microbiota metaproteome},
+  author={Marzano, Valeria and Levi Mortera, Stefano and Vernocchi, Pamela and Del Chierico, Federica and Marangelo, Chiara and Guarrasi, Valerio and Gardini, Simone and Dentici, Maria Lisa and Capolino, Rossella and Digilio, Maria Cristina and others},
+  journal={Scientific Reports},
+  volume={13},
+  number={1},
+  pages={18963},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{vernocchi2023gut,
+  title={Gut microbiota functional profiling in autism spectrum disorders: bacterial VOCs and related metabolic pathways acting as disease biomarkers and predictors},
+  author={Vernocchi, Pamela and Marangelo, Chiara and Guerrera, Silvia and Del Chierico, Federica and Guarrasi, Valerio and Gardini, Simone and Conte, Federica and Paci, Paola and Ianiro, Gianluca and Gasbarrini, Antonio and others},
+  journal={Frontiers in Microbiology},
+  volume={14},
+  pages={1287350},
+  year={2023},
+  publisher={Frontiers}
+}
+
+@article{di2023graph,
+  title={A graph neural network-based model with Out-of-Distribution Robustness for enhancing Antiretroviral Therapy Outcome Prediction for HIV-1},
+  author={Di Teodoro, Giulia and Siciliano, Federico and Guarrasi, Valerio and Vandamme, Anne-Mieke and Ghisetti, Valeria and S{\"o}nnerborg, Anders and Zazzi, Maurizio and Silvestri, Fabrizio and Palagi, Laura},
+  journal={arXiv preprint arXiv:2312.17506},
+  year={2023}
+}
+
+@article{romani2024exploring,
+  title={Exploring nasopharyngeal microbiota profile in children affected by SARS-CoV-2 infection},
+  author={Romani, L and Del Chierico, F and Pane, S and Ristori, MV and Pirona, I and Guarrasi, V and Cotugno, N and Bernardi, S and Lancella, L and Perno, CF and others},
+  journal={Microbiology Spectrum},
+  pages={e03009--23},
+  year={2024},
+  publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
 }
