--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@
   volume={13},
   pages={871086},
   year={2022},
-  publisher={Frontiers}
+  publisher={Frontiers Media SA}
 }
 
 @article{del2021fecal,
@@ -73,12 +73,14 @@
 }
 
 @article{taibi2021hepatitis,
-  title={Hepatitis C diagnosis and treatment in people who use drugs: mind the gap in the linkage to care.},
+  title={Hepatitis C diagnosis and treatment in people who use drugs: mind the gap in the linkage to care},
   author={Taibi, C and Luzzitelli, I and Comandini, U Visco and Girardi, E and Monacelli, G and Rapisarda, LM and Garbuglia, AR and Minosse, C and Guarrasi, V and Vincenzi, L and others},
-  journal={European Review for Medical \& Pharmacological Sciences},
+  journal={European Review for Medical and Pharmacological Sciences},
   volume={25},
   number={19},
-  year={2021}
+  pages={5913--5921},
+  year={2021},
+  publisher={Verduci Editore srl}
 }
 
 @article{liu2021temporal,
@@ -103,7 +105,7 @@
 }
 
 @inproceedings{guarrasi2021multi,
-  title={A multi-expert system to detect COVID-19 cases in X-ray images},
+  title={A multi-expert system to detect covid-19 cases in x-ray images},
   author={Guarrasi, Valerio and D'Amico, Natascha Claudia and Sicilia, Rosa and Cordelli, Ermanno and Soda, Paolo},
   booktitle={2021 IEEE 34th International Symposium on Computer-Based Medical Systems (CBMS)},
   pages={395--400},
@@ -124,7 +126,7 @@
 @article{fiscon2021assessing,
   title={Assessing the impact of data-driven limitations on tracing and forecasting the outbreak dynamics of COVID-19},
   author={Fiscon, Giulia and Salvadore, Francesco and Guarrasi, Valerio and Garbuglia, Anna Rosa and Paci, Paola},
-  journal={Computers in Biology and Medicine},
+  journal={Computers in biology and medicine},
   volume={135},
   pages={104657},
   year={2021},
@@ -138,11 +140,11 @@
   volume={12},
   pages={908492},
   year={2022},
-  publisher={Frontiers}
+  publisher={Frontiers Media SA}
 }
 
 @article{del2022gut,
-  title={Gut microbiota functional traits, blood PH, and anti-GAD antibodies concur in the clinical characterization of T1D at onset},
+  title={Gut microbiota functional traits, blood pH, and anti-GAD antibodies concur in the clinical characterization of T1D at onset},
   author={Del Chierico, Federica and Conta, Giorgia and Matteoli, Maria Cristina and Fierabracci, Alessandra and Reddel, Sofia and Macari, Gabriele and Gardini, Simone and Guarrasi, Valerio and Levi Mortera, Stefano and Marzano, Valeria and others},
   journal={International Journal of Molecular Sciences},
   volume={23},
@@ -180,7 +182,7 @@
 }
 
 @article{levi2022functional,
-  title={Functional and taxonomic traits of the gut microbiota in type 1 diabetes children at the onset: a metaproteomic study},
+  title={Functional and taxonomic traits of the gut microbiota in type 1 diabetes children at the onset: A metaproteomic study},
   author={Levi Mortera, Stefano and Marzano, Valeria and Vernocchi, Pamela and Matteoli, Maria Cristina and Guarrasi, Valerio and Gardini, Simone and Del Chierico, Federica and Rapini, Novella and Deodati, Annalisa and Fierabracci, Alessandra and others},
   journal={International Journal of Molecular Sciences},
   volume={23},
@@ -190,15 +192,18 @@
   publisher={MDPI}
 }
 
-@article{guarrasi2022multimodal,
+@article{guarrasi2024multimodal,
   title={Multimodal explainability via latent shift applied to COVID-19 stratification},
   author={Guarrasi, Valerio and Tronchin, Lorenzo and Albano, Domenico and Faiella, Eliodoro and Fazzini, Deborah and Santucci, Domiziana and Soda, Paolo},
-  journal={arXiv preprint arXiv:2212.14084},
-  year={2022}
+  journal={Pattern Recognition},
+  volume={156},
+  pages={110825},
+  year={2024},
+  publisher={Pergamon}
 }
 
 @article{laterza2023ecology,
-  title={Ecology and Machine Learning-Based Classification Models of Gut Microbiota and Inflammatory Markers May Evaluate the Effects of Probiotic Supplementation in Patients Recently Recovered from COVID-19},
+  title={Ecology and machine learning-based classification models of gut microbiota and inflammatory markers may evaluate the effects of probiotic supplementation in patients recently recovered from COVID-19},
   author={Laterza, Lucrezia and Putignani, Lorenza and Settanni, Carlo Romano and Petito, Valentina and Varca, Simone and De Maio, Flavio and Macari, Gabriele and Guarrasi, Valerio and Gremese, Elisa and Tolusso, Barbara and others},
   journal={International Journal of Molecular Sciences},
   volume={24},
@@ -217,31 +222,30 @@
   organization={CEUR-WS}
 }
 
-@article{caruso2023deep,
-  title={A Deep Learning Approach for Overall Survival Analysis with Missing Values},
-  author={Caruso, Camillo Maria and Guarrasi, Valerio and Ramella, Sara and Soda, Paolo},
-  journal={arXiv preprint arXiv:2307.11465},
-  year={2023}
-}
-
-@article{rofena2023deep,
-  title={A Deep Learning Approach for Virtual Contrast Enhancement in Contrast Enhanced Spectral Mammography},
+@article{rofena2024deep,
+  title={A deep learning approach for virtual contrast enhancement in Contrast Enhanced Spectral Mammography},
   author={Rofena, Aurora and Guarrasi, Valerio and Sarli, Marina and Piccolo, Claudia Lucia and Sammarra, Matteo and Zobel, Bruno Beomonte and Soda, Paolo},
-  journal={arXiv preprint arXiv:2308.00471},
-  year={2023}
+  journal={Computerized Medical Imaging and Graphics},
+  volume={116},
+  pages={102398},
+  year={2024},
+  publisher={Pergamon}
 }
 
-@article{cordelli2023making,
-  title={Making AI trustworthy in multimodal and healthcare scenarios},
+@inproceedings{cordelli2023making,
+  title={Making AI trustworthy in multimodal and healthcare scenarios.},
   author={Cordelli, Ermanno and Guarrasi, Valerio and Iannello, Giulio and Ruffini, Filippo and Sicilia, Rosa and Soda, Paolo and Tronchin, Lorenzo},
-  journal={Proceedings of the Ital-IA},
+  booktitle={Ital-IA},
+  pages={353--358},
   year={2023}
 }
 
-@article{conte2022sustainable,
-  title={Sustainable AI: inside the deep, alongside the green},
+@inproceedings{conte2023sustainable,
+  title={Sustainable AI: inside the deep, alongside the green.},
   author={Conte, Francesco and Cordelli, Ermanno and Guarrasi, Valerio and Iannello, Giulio and Sicilia, Rosa and Soda, Paolo and Tortora, Matteo and Tronchin, Lorenzo},
-  year={2022}
+  booktitle={Ital-IA},
+  pages={622--627},
+  year={2023}
 }
 
 @article{marzano2023williams,
@@ -262,7 +266,7 @@
   volume={14},
   pages={1287350},
   year={2023},
-  publisher={Frontiers}
+  publisher={Frontiers Media SA}
 }
 
 @article{di2023graph,
@@ -276,7 +280,120 @@
   title={Exploring nasopharyngeal microbiota profile in children affected by SARS-CoV-2 infection},
   author={Romani, L and Del Chierico, F and Pane, S and Ristori, MV and Pirona, I and Guarrasi, V and Cotugno, N and Bernardi, S and Lancella, L and Perno, CF and others},
   journal={Microbiology Spectrum},
+  volume={12},
+  number={3},
   pages={e03009--23},
   year={2024},
   publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
+}
+
+@article{di2024multi,
+  title={Multi-Scale Texture Loss for CT denoising with GANs},
+  author={Di Feola, Francesco and Tronchin, Lorenzo and Guarrasi, Valerio and Soda, Paolo},
+  journal={arXiv preprint arXiv:2403.16640},
+  year={2024}
+}
+
+@inproceedings{ruffini2024multi,
+  title={Multi-Dataset Multi-Task Learning for COVID-19 Prognosis},
+  author={Ruffini, Filippo and Tronchin, Lorenzo and Wu, Zhuoru and Chen, Wenting and Soda, Paolo and Shen, Linlin and Guarrasi, Valerio},
+  booktitle={International Conference on Medical Image Computing and Computer-Assisted Intervention},
+  pages={251--261},
+  year={2024},
+  organization={Springer Nature Switzerland Cham}
+}
+
+@article{caruso2024deep,
+  title={A deep learning approach for overall survival prediction in lung cancer with missing values},
+  author={Caruso, Camillo Maria and Guarrasi, Valerio and Ramella, Sara and Soda, Paolo},
+  journal={Computer Methods and Programs in Biomedicine},
+  volume={254},
+  pages={108308},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{ristori2024emerging,
+  title={Emerging Microorganisms and Infectious Diseases: One Health Approach for Health Shared Vision},
+  author={Ristori, Maria Vittoria and Guarrasi, Valerio and Soda, Paolo and Petrosillo, Nicola and Gurrieri, Fiorella and Longo, Umile Giuseppe and Ciccozzi, Massimo and Riva, Elisabetta and Angeletti, Silvia},
+  journal={Genes},
+  volume={15},
+  number={7},
+  pages={908},
+  year={2024}
+}
+
+@article{caruso2024not,
+  title={Not Another Imputation Method: A Transformer-based Model for Missing Values in Tabular Datasets},
+  author={Caruso, Camillo Maria and Soda, Paolo and Guarrasi, Valerio},
+  journal={arXiv preprint arXiv:2407.11540},
+  year={2024}
+}
+
+@article{guarrasi2024systematic,
+  title={A Systematic Review of Intermediate Fusion in Multimodal Deep Learning for Biomedical Applications},
+  author={Guarrasi, Valerio and Aksu, Fatih and Caruso, Camillo Maria and Di Feola, Francesco and Rofena, Aurora and Ruffini, Filippo and Soda, Paolo},
+  journal={arXiv preprint arXiv:2408.02686},
+  year={2024}
+}
+
+@inproceedings{adornato2024virtual,
+  title={Virtual scanner: leveraging resilient generative ai for radiological imaging in the era of medical digital twins},
+  author={Adornato, Carolina and Assolito, Cecilia and Cordelli, Ermanno and Di Feola, Francesco and Guarrasi, Valerio and Iannello, Giulio and Marcoccia, Lorenzo and Ayllon, Elena Mulero and Restivo, Rebecca and Rofena, Aurora and others},
+  booktitle={2024 Ital-IA Intelligenza Artificiale-Thematic Workshops, Ital-IA 2024, Naples, Italy, May 29-30, 2024},
+  pages={60--65},
+  year={2024},
+  organization={CEUR-WS}
+}
+
+@inproceedings{aksu2024towards,
+  title={Towards AI-driven next generation personalized healthcare and well-being},
+  author={Aksu, Fatih and Bria, Alessandro and Caragliano, Alice Natalina and Caruso, Camillo Maria and Chen, Wenting and Cordelli, Ermanno and Coser, Omar and Francesconi, Arianna and Furia, Leonardo and Guarrasi, Valerio and others},
+  booktitle={2024 Ital-IA Intelligenza Artificiale-Thematic Workshops, Ital-IA 2024, Naples, Italy, May 29-30, 2024},
+  pages={360--365},
+  year={2024},
+  organization={CEUR-WS}
+}
+
+@inproceedings{guarrasi2024robustrecsys,
+  title={RobustRecSys@ RecSys2024: Design, Evaluation and Deployment of Robust Recommender Systems},
+  author={Guarrasi, Valerio and Siciliano, Federico and Silvestri, Fabrizio},
+  booktitle={Proceedings of the 18th ACM Conference on Recommender Systems},
+  pages={1265--1269},
+  year={2024}
+}
+
+@article{francesconi2024class,
+  title={Class Balancing Diversity Multimodal Ensemble for Alzheimer's Disease Diagnosis and Early Detection},
+  author={Francesconi, Arianna and di Biase, Lazzaro and Cappetta, Donato and Rebecchi, Fabio and Soda, Paolo and Sicilia, Rosa and Guarrasi, Valerio},
+  journal={arXiv preprint arXiv:2410.10374},
+  year={2024}
+}
+
+@article{piccolo2024radiomics,
+  title={Radiomics for Predicting Prognostic Factors in Breast Cancer: Insights from Contrast-Enhanced Mammography (CEM)},
+  author={Piccolo, Claudia Lucia and Sarli, Marina and Pileri, Matteo and Tommasiello, Manuela and Rofena, Aurora and Guarrasi, Valerio and Soda, Paolo and Beomonte Zobel, Bruno},
+  journal={Journal of Clinical Medicine},
+  volume={13},
+  number={21},
+  pages={6486},
+  year={2024},
+  publisher={MDPI}
+}
+
+@article{mogensen2025optimized,
+  title={An optimized ensemble search approach for classification of higher-level gait disorder using brain magnetic resonance images},
+  author={Mogensen, Klara and Guarrasi, Valerio and Larsson, Jenny and Hansson, William and W{\aa}hlin, Anders and Koskinen, Lars-Owe and Malm, Jan and Eklund, Anders and Soda, Paolo and Qvarlander, Sara},
+  journal={Computers in Biology and Medicine},
+  volume={184},
+  pages={109457},
+  year={2025},
+  publisher={Pergamon}
+}
+
+@article{caruso2024maria,
+  title={MARIA: a Multimodal Transformer Model for Incomplete Healthcare Data},
+  author={Caruso, Camillo Maria and Soda, Paolo and Guarrasi, Valerio},
+  journal={arXiv preprint arXiv:2412.14810},
+  year={2024}
 }
