--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -335,11 +335,13 @@
   year={2024}
 }
 
-@article{guarrasi2024systematic,
+@article{guarrasi2025systematic,
   title={A systematic review of intermediate fusion in multimodal deep learning for biomedical applications},
   author={Guarrasi, Valerio and Aksu, Fatih and Caruso, Camillo Maria and Di Feola, Francesco and Rofena, Aurora and Ruffini, Filippo and Soda, Paolo},
-  journal={arXiv preprint arXiv:2408.02686},
-  year={2024}
+  journal={Image and Vision Computing},
+  pages={105509},
+  year={2025},
+  publisher={Elsevier}
 }
 
 @inproceedings{adornato2024virtual,
